--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     position: relative;
   }
   
-.container span {
+.container > span {
     position: absolute;
     width: 20px;
     height: 10px;
